small adjustments on homepage

--- a/activityhome.html
+++ b/activityhome.html
@@ -48,5 +48,12 @@
       </p>
     </div>
 
+    <div class="footer">
+      <hr>
+      <p>Made with ❤ by Katie and Ella</p>
+      <p>See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+    </div>
+
+
   </body>
 </html>
