fix footer and small changes

--- a/resources.html
+++ b/resources.html
@@ -104,8 +104,12 @@
       </div>
 
     </div>
+    <br><br><br><br>
+    <div class="footer-1">
+      <hr>
+      <p class="footer-text" style="text-align: center;">Made with ❤ by Katie and Ella</p>
+      <p class="footer-text" style="text-align: center;">See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+    </div>
     
-
- 
   </body>
 </html>
