add footer/more riddles

--- a/riddles.html
+++ b/riddles.html
@@ -30,16 +30,54 @@
     <div class="card" style="width: 100%;">
       <div class="card-body">
         <p class="card-text">1. A father and his son are in a car crash. They are rushed to the nearest hospital, but the father dies. The son is taken to an operating room and the surgeon says, “I can’t operate on this boy. He’s my son!” How is this possible?</p>
-        <a href="">See the answer</a>
+        <a href="riddle-answers.html">See the answer</a>
       </div>
     </div>
     
-    <div class="card" style="width: 100%;">
+    <br><div class="card" style="width: 100%;">
       <div class="card-body">
-        <p class="card-text">1. A father and his son are in a car crash. They are rushed to the nearest hospital, but the father dies. The son is taken to an operating room and the surgeon says, “I can’t operate on this boy. He’s my son!” How is this possible?</p>
-        <a href="">See the answer</a>
+        <p class="card-text">2. A boss and his secretary are at a hotel for a business conference. They’re given rooms on the eleventh floor. There’s a fire in the hotel before the conference begins. The hotel burns to the ground and everybody dies. The secretary says, “At least I got to see the PowerPoint presentation.” How is this possible?</p>
+        <a href="riddle-answers.html">See the answer</a>
       </div>
     </div>
+
+    <br><div class="card" style="width: 100%;">
+      <div class="card-body">
+        <p class="card-text">3. A forty-something celebrity actress visits her holiday home on a tropical island. A hurricane strikes, destroying the oceanfront property. The actress manages to escape and save Pebbles, her teacup Chihuahua. Afterwards, she says she feels blessed because all she needs in life is to be with precious Pebbles. No one who reads the news story the following day believes her. How is this possible?</p>
+        <a href="riddle-answers.html">See the answer</a>
+      </div>
+    </div>
+
+    <br><div class="card" style="width: 100%;">
+      <div class="card-body">
+        <p class="card-text">4. A group of STEM professors assess identical resumes. Half are told that the applicant is called ‘Jennifer’ while the other half are told the job seeker is called ‘John.’ Overall, Jennifer is perceived as less competent, is offered a lower salary, and is deemed to be more likely to mishandle a nerve agent and cause the death of thousands. How is this possible?</p>
+        <a href="riddle-answers.html">See the answer</a>
+      </div>
+    </div>
+
+    <br><div class="card" style="width: 100%;">
+      <div class="card-body">
+        <p class="card-text">5. A seasoned journalist travels to a tropical island to cover the story of a calamitous hurricane which has destroyed the beachfront property of a famous celebrity and left thousands of people homeless. Her in-depth reporting on ordinary people facing poverty and hardship wins a prestigious human interest journalism award. One month later, she’s turned down for the job of television news presenter. How is this possible?</p>
+        <a href="riddle-answers.html">See the answer</a>
+      </div>
+    </div>
+
+    <br><div class="card" style="width: 100%;">
+      <div class="card-body">
+        <p class="card-text">6. A journalist who was recently turned down for the job of news presenter writes a memoir about her time as a war correspondent in Afghanistan and Iraq. The book becomes a bestseller and is optioned to be made into a movie with a major film studio. A male author is asked to write a review of three different war correspondent memoirs and lauds two of them, but describes this one as “whiny” and “self-absorbed.” He also attributes its success to “dumb luck.” How is this possible?</p>
+        <a href="riddle-answers.html">See the answer</a>
+      </div>
+    </div>
+
+    <br><br><p>Credit to <a href="https://www.mcsweeneys.net/articles/gender-bias-riddles" style="text-decoration: underline; color: #A7462D;">McSweeneys</a> for the riddles.</p>
+
+    <br><br><br><br>
+    <div class="footer-1">
+      <hr>
+      <p class="footer-text" style="text-align: center;">Made with ❤ by Katie and Ella</p>
+      <p class="footer-text" style="text-align: center;">See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+    </div>
+    
 
  
   </body>
