--- a/sorting.html
+++ b/sorting.html
@@ -23,6 +23,11 @@
       This is some text.
     </p>
 
+    <div class="footer">
+      <hr>
+      <p class="footer-text">Made with ❤ by Katie and Ella</p>
+      <p>See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+    </div>
  
   </body>
 </html>
