sorting directions and css

--- a/sorting.html
+++ b/sorting.html
@@ -19,14 +19,20 @@
   </head> 
   
   <body>
+
+    <button class="home">
+      <a href="activityhome.html">back to activities</a>
+    </button>
+
     <h1 class="text-center">Sorting</h1>
     
     <div class="card" style="width: 100%;">
       <div class="card-body">
-        <p class="card-text">Instructions: Welcome to sorting! Once you click start, a timer will begin as you drag words from the word bank to each category. Then, once you finish the first part, you’ll be given slightly different categories and you’ll do the same thing. Once you’re finished, compare your times from each part!</p>
-        
-      </div>
-    </div>
+        <p class="card-text">
+          Instructions: Welcome to sorting! Once you click start, there will be a task where you will drag words from the word bank to each respective category. Then, once you finish the first part, you will move on to the second part where you’ll be given slightly different categories. You will sort these once again. When sorting, you must start from the first card in the top left and continue to the right. After you are finished sorting, there will be a page that allows you to reflect on the activity and your biases.</p>
+        </div>
+    </div><br><br>
+    <button style="margin-left: 45%"><a href="sorting-screen.html">Start Activity</a></button>
 
     <div class="footer">
       <hr>
