--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Fighting Stereotypes</title>
+    <title>Aware</title>
 
     <!-- Bootstrap stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,7 +23,7 @@
     <h1 class="text-center">Hi there!</h1>
     
     <p class="intro-blurb">
-      Welcome to [name of website]! This is a place to explore sterotypes and their 
+      Welcome to <strong>Aware</strong>! This is a place to explore sterotypes and their 
       impacts, as well as to learn how to be more conscious of 
       your own words and actions. Check out the resources below!
     </p>
