edit footer link

--- a/riddle-answers.html
+++ b/riddle-answers.html
@@ -77,7 +77,7 @@
         <div class="footer">
             <hr>
             <p>Made with ❤ by Katie and Ella</p>
-            <p>See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+            <p>See the source code <a href="https://github.com/eilla1/aware" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
         </div>
  
 
