--- a/riddles.html
+++ b/riddles.html
@@ -75,7 +75,7 @@
     <div class="footer-1">
       <hr>
       <p class="footer-text" style="text-align: center;">Made with ❤ by Katie and Ella</p>
-      <p class="footer-text" style="text-align: center;">See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+      <p class="footer-text" style="text-align: center;">See the source code <a href="https://github.com/eilla1/aware" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
     </div>
     
 
