--- a/sorting-screen.html
+++ b/sorting-screen.html
@@ -107,7 +107,7 @@
        <button><a href="sorting-screen2.html" style="text-decoration: none; color: #E7C4A8;">Continue >></a></button>
       <hr>
       <p class="footer-text">Made with ❤ by Katie and Ella</p>
-      <p>See the source code <a href="https://github.com/eilla1/stereotype-awareness" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
+      <p>See the source code <a href="https://github.com/eilla1/aware" style="text-decoration: underline; color: #A7462D;">here</a>.</p>
     </div>
  
   </body>
